changing th font of navbar and gerosection

--- a/client/src/Componets/Home/Navbar/Navbar.css
+++ b/client/src/Componets/Home/Navbar/Navbar.css
@@ -8,6 +8,12 @@
   position: fixed;
   z-index: 1001;
 }
+
+.navbar .item{
+  font-family: "Poppins", serif;
+  font-size: 16px;
+}
+
 @media (max-width: 700px) {
 
 .header{
