--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+ 
+*{
+  margin: 0%;
+
+  padding: 0%;
+  box-sizing: border-box;
+}
+
+
+
 @keyframes scroll {
     0% {
       transform: translateX(0);
