--- a/client/src/Componets/contact/contact.css
+++ b/client/src/Componets/contact/contact.css
@@ -1,4 +1,4 @@
-.container {
+.contactContainer {
     display: flex;
 
     justify-content: space-between;
@@ -89,7 +89,7 @@
     margin-bottom: 20px;
   }
   
-  .button {
+  .contactButton {
     padding: 10px 20px;
     border: 1px solid black;
     background-color: transparent;
@@ -105,7 +105,7 @@
   
  
 
-    .container {
+    .contactContainer {
       flex-direction: column;
       padding: 20px;
     }
@@ -128,7 +128,7 @@
     .inputFull, .textarea {
       font-size: 14px;
     }
-    .button {
+    .contactButton {
       font-size: 16px;
     }
   }
