--- a/client/src/Componets/contact/contact.css
+++ b/client/src/Componets/contact/contact.css
@@ -68,7 +68,7 @@
     width: 100%;
     margin-bottom: 15px;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #262262;
     border-radius: 5px;
   }
   
@@ -76,7 +76,7 @@
     width: 100%;
     height: 100px;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #262262;
     border-radius: 5px;
     margin-bottom: 15px;
   }
@@ -91,7 +91,7 @@
   
   .contactButton {
     padding: 10px 20px;
-    border: 1px solid black;
+    border: 1px solid #262262;
     background-color: transparent;
     color: black;
     font-size: 20px;
