did some changes in ui

--- a/client/src/Componets/Home/Herosection/HeroSection.css
+++ b/client/src/Componets/Home/Herosection/HeroSection.css
@@ -33,7 +33,7 @@ transition: transform 0.5s ease;
 }
 
 
-.consultaion{
+.herobutton{
   display: none;
 }
 
@@ -100,7 +100,7 @@ transition: transform 0.5s ease;
 
     }
   }
- .consultaion{
+ .herobutton{
   display: block;
  }
 .button{
