--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,3 +106,13 @@
     font-size: 16px;
   }
 }
+
+.circle{
+  animation: rotate 5s infinite linear;
+}
+
+@keyframes rotate {
+  from {top: 0px;}
+  to {top: 200px;}
+
+}
