--- a/client/src/Componets/Home/Portfolio/scrolingcardRight.css
+++ b/client/src/Componets/Home/Portfolio/scrolingcardRight.css
@@ -62,8 +62,9 @@
 width: 50%;
 	margin: auto;
 	text-align: center;
-	font-size: 24px;
-	color: #232323;
+	color: #4b5563;
+	font-size: 1.125rem /* 18px */;
+    line-height: 1.75rem /* 28px */;
 	margin-bottom: 8px;
 
 }
@@ -71,6 +72,7 @@ width: 50%;
 @media (max-width: 700px){
  .Portfolio-container{
 	margin-top: 56vh;
+	margin-bottom: 0;
  }
 
  .OurPortfolio{
@@ -84,7 +86,8 @@ width: 50%;
 	width: 80%;
 	margin: auto;
 	text-align: center;
-	color: #232323;
+	color: #4b5563;
+
  }
 #cards{
 	display: grid;
