--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,14 +10,15 @@
   font-weight: 600;
   color: #262262;
   margin-bottom: 4px;
-  margin-top: 10rem;
+  margin-top: 4rem;
 }
 .whyChoosePara{
   /* w-full sm:w-2/3 m-auto text-center text-[20px] text-[#232323] mb-8 */
   width: 100%;
   text-align: center;
-  font-size: 20px;
-  color: #232323;
+	color: #4b5563;
+	font-size: 1.125rem /* 18px */;
+    line-height: 1.75rem /* 28px */;
   margin-bottom: 8px;
 }
 
@@ -33,9 +34,10 @@
   /* w-full sm:w-1/2 m-auto text-center text-[20px] text-[#232323] mb-8 */
   width: 100%;
   text-align: center;
-  font-size: 20px;
-  color: #232323;
-  margin-bottom: 8px;
+  color: #4b5563;
+	font-size: 1.125rem /* 18px */;
+    line-height: 1.75rem /* 28px */;
+  margin-bottom: 28px;
 
 }
 
@@ -50,9 +52,11 @@
 .FAQP{
   /* text-center text-[#232323] mb-6 sm:text-base text-[24px] */
   text-align: center;
-  color: #232323;
+
   margin-bottom: 6px;
-  font-size: 24px;
+  color: #4b5563;
+	font-size: 1.125rem /* 18px */;
+    line-height: 1.75rem /* 28px */
 }
 .inputOpentext{
   /* px-4 py-3 bg-white text-gray-700 shadow-inner */
@@ -61,8 +65,9 @@
   padding: 3px;
   background-color: white;
   /* color: rgb(161, 158, 158); */
-  color: rgb(73, 73, 73);
-  box-shadow: inset;
+  color: #4b5563;
+	font-size: 1rem /* 18px */;
+    line-height: 1.75rem /* 28px */;
   text-align: center;
 }
 @media (max-width: 768px) {
