--- a/client/src/Componets/contact/contact.css
+++ b/client/src/Componets/contact/contact.css
@@ -48,6 +48,7 @@
   .contactDetail {
     display: flex;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
     gap: 2px;
   }
   
@@ -57,11 +58,13 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    font-family: 'Poppins', sans-serif;
   }
   
   .form {
     display: flex;
     flex-direction: column;
+    font-family: 'Poppins', sans-serif;
   }
   
   .inputFull {
@@ -70,6 +73,7 @@
     padding: 10px;
     border: 1px solid #262262;
     border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
   }
   
   .textarea {
@@ -79,6 +83,7 @@
     border: 1px solid #262262;
     border-radius: 5px;
     margin-bottom: 15px;
+    font-family: 'Poppins', sans-serif;
   }
   
   .services {
@@ -87,6 +92,7 @@
     gap: 30px;
     margin-top: 10px;
     margin-bottom: 20px;
+    font-family: 'Poppins', sans-serif;
   }
   
   .contactButton {
@@ -99,6 +105,7 @@
     font-weight: 600;
     border-radius: 15px;
     cursor: pointer;
+    font-family: 'Poppins', sans-serif;
   }
   
   @media (max-width: 768px) {
